force-app/main/default/objects/vlocity_ps__OutcomeTask__c/vlocity_ps__OutcomeTask__c.object-meta.xml
<CustomObject>
    <description>An activity that is part of a service plan, which may be the responsibility of someone who is not a Salesforce user</description>
    <label>Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>