force-app/main/default/objects/vlocity_ps__OutcomeTask__c/fields/vlocity_ps__AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>