force-app/main/default/objects/vlocity_ps__OutcomeTask__c/fields/vlocity_ps__OutcomeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OutcomeId__c</fullName>
    <label>Outcome</label>
    <referenceTo>vlocity_ps__ServicePlanOutcome__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>