force-app/main/default/objects/vlocity_ps__OutcomeTask__c/fields/vlocity_ps__ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ReferenceNumber__c</fullName>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>